date fromat change

--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 MONGODB_URL=mongodb://localhost:27017
 MONGODB_DB=symfony
 ###< doctrine/mongodb-odm-bundle ###
+
+###> nelmio/cors-bundle ###
+#CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=^https?://.*?$
+###< nelmio/cors-bundle ###
