--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/mongodb-odm-bundle": "^4.1",
         "jms/serializer": "^3.6",
         "jms/serializer-bundle": "^3.5",
+        "nelmio/cors-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
